--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "version": "0.0.1",
   "main": "./src/index.js",
   "license": "MIT",
+  "preferGlobal": true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/wilf312/scaffoId.git"
   },
   "dependencies": {
-    "cross-spawn": "^5.0.1"
+    "commander": "^2.9.0",
+    "inquirer": "^2.0.0"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "start": "node test/index.js",
     "dev": "$(npm bin)/gulp"
